[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Gaming Realm - a project built for Avishkar 2022"
authors = ["Anand Krishna <anand2312@proton.me>", "Vivek Ashokkumar <vivekashok2112@gmail.com>", "Gautham Krishna Jayasurya <gautham.jayasurya@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
