[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Gaming Realm - a project built for Avishkar 2022"
authors = ["Anand Krishna <anand2312@proton.me>", "Vivek Ashokkumar <vivekashok2112@gmail.com>", "Gautham Krishna Jayasurya <gautham.jayasurya@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
prisma = "^0.7.0"
loguru = "^0.6.0"
uvicorn = {extras = ["fast"], version = "^0.19.0"}
python-multipart = "^0.0.5"
passlib = {extras = ["argon2"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.10.2"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
taskipy = "^1.10.3"
flake8 = "^5.0.4"
flake8-annotations = "^2.9.1"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
pyright = "^1.1.279"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.taskipy.tasks]
lint = { cmd = "pre-commit run --all-files", help = "Lints project." }
format = { cmd = "black .", help = "Runs Black autoformatter." }
runserver = { cmd = "uvicorn --reload src.backend.app:app", help = "Runs the backend server." }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
